test_case/rust-lang_rust/8416_22423861.rs

fn main() {
    let a = 2;
    let a = 3;
    printf!(a);
    printf!(b);  // error: unresolved name `b`. Did you mean `a`?
}
